--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -4,6 +4,8 @@ repositories {
     flatDir {
         dirs rootProject.file('libs')
     }
+    maven { url = 'https://maven.brott.dev/' }                        //lk
+    //maven { url = "https://maven.0x778.tk" }
 }
 
 dependencies {
@@ -18,5 +20,9 @@ dependencies {
     implementation 'org.tensorflow:tensorflow-lite-task-vision:0.2.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'org.firstinspires.ftc:gameAssets-PowerPlay:1.0.0'
+
+    //implementation 'com.acmerobotics.dashboard:dashboard:0.4.6'        //lk
+    //implementation 'org.ftclib.ftclib:core:2.0.1'
+    //implementation files('lib/ftc265-3.0.0-pre.5.aar')
 }
 
