--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -19,7 +19,16 @@ android {
     namespace = 'org.firstinspires.ftc.teamcode'
 }
 
+repositories {
+    maven { url = "https://maven.0x778.tk" }
+}
+
 dependencies {
     implementation project(':FtcRobotController')
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
+    implementation 'org.ftclib.ftclib:core:2.0.1'         //lk
+    implementation files('lib/ftc265-3.0.0-pre.5.aar')    //lk
+    implementation 'com.acmerobotics.dashboard:dashboard:0.4.6'        //lk
+    implementation 'com.acmerobotics.roadrunner:core:0.5.3'
+    //implementation 'com.spartronics4915.lib:ftc265:2.1.9'
 }
